--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Hello World</title>
+    <link href="css/style.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
 <div id="app"></div>
 </body>
-<script src="hello-fastopt-bundle.js"></script>
+<script src="scalajsplayground-fastopt-bundle.js"></script>
 </html>
